<resources>
    <string name="app_name">SailingCompetition</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_refresh">Odśwież</string>


    <string name="log_in">Zaloguj</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="forgot_password">Zapomniałem hasła</string>
    <string name="sign_up">Zarejestruj</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="sail_no">Numer</string>
    <string name="club_name">Klub</string>
    <string name="birth_date">Data ur.</string>
    <string name="license_no">Nr licencji</string>
    <string name="gender">Płeć</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefon</string>
    <string name="doctors_perm">Ważność badań lekarskich</string>
    <string name="country">Kraj</string>
    <string name="place">Miejsce</string>
    <string name="delete_profile">Usuń profil</string>
    <string name="update_profile">Aktualizuj profil</string>
    <string name="contestant_data">Dane zawodnika</string>
    <string name="settings">Ustawienia</string>
    <string name="language">Język</string>
    <string name="sound_signal">Sygnał dźwiękowy</string>
    <string name="voice_signal">Sygnał głosowy</string>
    <string name="activity">Aktywność</string>
    <string name="track">Trasa</string>
    <string name="procedure">Procedura</string>
    <string name="preview">Podgląd</string>
    <string name="race">Wyścig</string>
    <string name="wind">Wiatr</string>
    <string name="hour">Godzina</string>
    <string name="postponement">Odroczenie</string>
    <string name="ap_over_a">AP nad A</string>
    <string name="ap_over_a_up">AP nad A w górę</string>
    <string name="ap_over_a_down">AP nad A w dół</string>
    <string name="ap_up">AP w górę</string>
    <string name="ap_down">AP w dół</string>
    <string name="competitor">Zawodnik</string>
    <string name="flags">Flagi</string>
    <string name="speed">Prędkość</string>
    <string name="position">Pozycja</string>
    <string name="degree">Kąt</string>
    <string name="info">Informacje</string>
    <string name="discipline">Dyscyplina</string>
    <string name="competition">Zawody</string>
    <string name="competitions">Zawody</string>
    <string name="sub_discipline">Konkurencja</string>
    <string name="account_type">Typ konta</string>
    <string name="coach">Trener</string>
    <string name="buoy">Boja</string>
    <string name="add_account">Dodaj konto</string>
    <string name="choose_account">Wybierz konto</string>
    <string name="save">Zapisz</string>
    <string name="delete">Usuń</string>
    <string name="cancel">Anuluj</string>
    <string name="claim_protest">Zgłoś protest</string>
    <string name="call_for_help">Wezwij pomoc</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_race_info">RaceInfo</string>
    <string name="title_activity_choose_account">ChooseAccount</string>
    <string name="title_activity_add_account">AddAccount</string>
    <string name="title_activity_choose_competition">Zawody</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_race_map">Map</string>
    <string name="title_activity_competition_info">CompetitionInfo</string>

</resources>
