<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dodo.com.sailingcompetition.CompetitionInfo">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="10dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/datetime"
            android:text="2015-01-01"
            android:id="@+id/dateFrom"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/dateFrom"
            android:layout_marginLeft="15dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/datetime"
            android:textSize="10dp"
            android:text="2015-01-01"
            android:id="@+id/dateTo"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
    <TextView
        android:id="@+id/competitionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#competition_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="85dp"
            android:text="@string/postponement"
            android:background="@drawable/red_circle_background"
            style="@style/inside_circle"
            android:gravity="center_vertical|center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="85dp"
            android:text="@string/ap_over_a"
            android:background="@drawable/red_circle_background"
            style="@style/inside_circle"
            android:gravity="center_vertical|center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="85dp"
            android:text="@string/procedure"
            android:background="@drawable/red_circle_background"
            style="@style/inside_circle"
            android:gravity="center_vertical|center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="85dp"
            android:text="@string/race"
            android:background="@drawable/red_circle_background"
            style="@style/inside_circle"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ap_over_a_down" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ap_over_a_up" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ap_up" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track" />
        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#track_name" />
        <Button
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:background="@drawable/dark_blue_btn"
            style="@style/primary_btn">
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/race"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/race"
        android:background="@drawable/dark_green_btn"
        style="@style/primary_btn">
    </Button>

</LinearLayout>
